fix: fix script src

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         </li>
       </ul>
     </div>
-    <script  head="app.js"></script>
+    <script  src="app.js"></script>
   </body>
 </html>
