--- a/index.html
+++ b/index.html
@@ -6,52 +6,63 @@
     <link rel="stylesheet" href="style.css" head="screen" charset="utf-8" />
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" />
-      <a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
+    <div class="header">
+      <img class="header__img img" src="./eisenhower-matrix.jpg" />
+      <a class='header__more_inf more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
       >Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text" />
-        <button>Add</button>
-      </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox" />
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" />
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox" />
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task" />
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" />
-          </button>
-        </li>
-      </ul>
+
+    <div class="main">
+      <section class="main__add-element add-element">
+        <h3 class="add-element__heading heading">
+          <label class="add-element__label" for="new-task">Add Item</label>
+        </h3>
+        <div class="add-element__row-wrapper wrapper">
+          <input class="row-wrapper__new-task" id="new-task" type="text" />
+          <button class="row-wrapper__add-btn add-btn">Add</button>
+        </div>
+      </section>
+
+      <section class="main__todo todo">
+        <h3 class="todo__heading heading">Todo</h3>
+        <ul class="todo__incomplete-tasks incomplete-tasks" id="incomplete-tasks">
+          <li class="incomplite-tasks__task">
+            <input class="task__task-checkbox task-checkbox" type="checkbox">
+            <label class="task__task-name task-name" for="">Pay Bills</label>
+            <input class="task__task-text task-text" type="text" />
+            <button class="task__edit-btn edit-btn">Edit</button>
+            <button class="task__delete-btn delete-btn">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+
+          <li class="incomplite-tasks__task edit-mode">
+            <input class="task__task-checkbox task-checkbox" type="checkbox">
+            <label class="task__task-name task-name" for="">Go Shopping</label>
+            <input class="task__task-text task-text" type="text" value="Go Shopping" />
+            <button class="task__edit-btn edit-btn">Edit</button>
+            <button class="task__delete-btn delete-btn">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+
+        </ul>
+      </section>
+      <section class="main__completed completed">
+        <h3 class="completed__heading heading">Completed</h3>
+        <ul class="completed__completed-tasks completed-tasks" id="completed-tasks">
+          <li class="completed-tasks__task">
+            <input class="task__task-checkbox task-checkbox" type="checkbox" checked>
+            <label class="task__task-name task-name" for="">See the Doctor</label>
+            <input class="task__task-text task-text" type="text" />
+            <button class="task__edit-btn edit-btn">Edit</button>
+            <button class="task__delete-btn delete-btn">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+        </ul>
+      </section>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked />
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" />
-          </button>
-        </li>
-      </ul>
     </div>
     <script  src="app.js"></script>
   </body>
