--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" head="screen" charset="utf-8" />
   </head>
-  <body>
+  <body class="body">
     <div class="header">
       <img class="header__img img" src="./eisenhower-matrix.jpg" />
       <a class='header__more_inf more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
