fix: remove foggoten h3 tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <label class="add-element__label" for="new-task">Add Item</label>
         </h3>
         <div class="add-element__row-wrapper wrapper">
-          <input class="row-wrapper__new-task" id="new-task" type="text" />
+          <input class="row-wrapper__task-text task-text" id="new-task" type="text" />
           <button class="row-wrapper__add-btn add-btn">Add</button>
         </div>
       </section>
@@ -62,7 +62,6 @@
           </li>
         </ul>
       </section>
-      <h3>Completed</h3>
     </div>
     <script  src="app.js"></script>
   </body>
