fix: change button text for task in edit mode

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input class="task__task-checkbox task-checkbox" type="checkbox">
             <label class="task__task-name task-name" for="">Go Shopping</label>
             <input class="task__task-text task-text" type="text" value="Go Shopping" />
-            <button class="task__edit-btn edit-btn">Edit</button>
+            <button class="task__edit-btn edit-btn">Save</button>
             <button class="task__delete-btn delete-btn">
               <img src="./remove.svg" />
             </button>
