--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input class="task__task-text task-text" type="text" />
             <button class="task__edit-btn edit-btn">Edit</button>
             <button class="task__delete-btn delete-btn">
-              <img src="./remove.svg" />
+              <img class="delete-btn__img" src="./remove.svg" />
             </button>
           </li>
 
@@ -42,7 +42,7 @@
             <input class="task__task-text task-text" type="text" value="Go Shopping" />
             <button class="task__edit-btn edit-btn">Save</button>
             <button class="task__delete-btn delete-btn">
-              <img src="./remove.svg" />
+              <img class="delete-btn__img" src="./remove.svg" />
             </button>
           </li>
 
