feat: add btn class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </h3>
         <div class="add-element__row-wrapper wrapper">
           <input class="row-wrapper__task-text task-text" id="new-task" type="text" />
-          <button class="row-wrapper__add-btn add-btn">Add</button>
+          <button class="row-wrapper__add-btn add-btn btn">Add</button>
         </div>
       </section>
 
@@ -30,8 +30,8 @@
             <input class="task__task-checkbox task-checkbox" type="checkbox">
             <label class="task__task-name task-name" for="">Pay Bills</label>
             <input class="task__task-text task-text" type="text" />
-            <button class="task__edit-btn edit-btn">Edit</button>
-            <button class="task__delete-btn delete-btn">
+            <button class="task__edit-btn edit-btn btn">Edit</button>
+            <button class="task__delete-btn delete-btn btn">
               <img class="delete-btn__img" src="./remove.svg" />
             </button>
           </li>
@@ -40,8 +40,8 @@
             <input class="task__task-checkbox task-checkbox" type="checkbox">
             <label class="task__task-name task-name" for="">Go Shopping</label>
             <input class="task__task-text task-text" type="text" value="Go Shopping" />
-            <button class="task__edit-btn edit-btn">Save</button>
-            <button class="task__delete-btn delete-btn">
+            <button class="task__edit-btn edit-btn btn">Save</button>
+            <button class="task__delete-btn delete-btn btn">
               <img class="delete-btn__img" src="./remove.svg" />
             </button>
           </li>
@@ -55,8 +55,8 @@
             <input class="task__task-checkbox task-checkbox" type="checkbox" checked>
             <label class="task__task-name task-name" for="">See the Doctor</label>
             <input class="task__task-text task-text" type="text" />
-            <button class="task__edit-btn edit-btn">Edit</button>
-            <button class="task__delete-btn delete-btn">
+            <button class="task__edit-btn edit-btn btn">Edit</button>
+            <button class="task__delete-btn delete-btn btn">
               <img src="./remove.svg" />
             </button>
           </li>
