fix: add proper class to delete button image, fix transition drom Complete to Incomplete

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <input class="task__task-text task-text" type="text" />
             <button class="task__edit-btn edit-btn btn">Edit</button>
             <button class="task__delete-btn delete-btn btn">
-              <img src="./remove.svg" />
+              <img class="delete-btn__img" src="./remove.svg" />
             </button>
           </li>
         </ul>
