fix: add alt to images according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <div class="header">
-      <img class="header__img img" src="./eisenhower-matrix.jpg" />
+      <img class="header__img img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix picture"/>
       <a class='header__more_inf more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
       >Want more details?</a>
     </div>
@@ -32,7 +32,7 @@
             <input class="task__task-text task-text" type="text" />
             <button class="task__edit-btn edit-btn btn">Edit</button>
             <button class="task__delete-btn delete-btn btn">
-              <img class="delete-btn__img" src="./remove.svg" />
+              <img class="delete-btn__img" src="./remove.svg" alt="remove button"/>
             </button>
           </li>
 
@@ -42,7 +42,7 @@
             <input class="task__task-text task-text" type="text" value="Go Shopping" />
             <button class="task__edit-btn edit-btn btn">Save</button>
             <button class="task__delete-btn delete-btn btn">
-              <img class="delete-btn__img" src="./remove.svg" />
+              <img class="delete-btn__img" src="./remove.svg" alt="remove button"/>
             </button>
           </li>
 
@@ -57,7 +57,7 @@
             <input class="task__task-text task-text" type="text" />
             <button class="task__edit-btn edit-btn btn">Edit</button>
             <button class="task__delete-btn delete-btn btn">
-              <img class="delete-btn__img" src="./remove.svg" />
+              <img class="delete-btn__img" src="./remove.svg" alt="remove button"/>
             </button>
           </li>
         </ul>
