refactor: add more semantic tags(header) according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="style.css" head="screen" charset="utf-8" />
   </head>
   <body class="body">
-    <div class="header">
+    <header class="header">
       <img class="header__img img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix picture"/>
       <a class='header__more_inf more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
       >Want more details?</a>
-    </div>
-
+    </header>
     <div class="main">
       <section class="main__add-element add-element">
         <h3 class="add-element__heading heading">
@@ -22,7 +21,6 @@
           <button class="row-wrapper__add-btn add-btn btn">Add</button>
         </div>
       </section>
-
       <section class="main__todo todo">
         <h3 class="todo__heading heading">Todo</h3>
         <ul class="todo__incomplete-tasks incomplete-tasks" id="incomplete-tasks">
@@ -35,7 +33,6 @@
               <img class="delete-btn__img" src="./remove.svg" alt="remove button"/>
             </button>
           </li>
-
           <li class="incomplite-tasks__task edit-mode">
             <input class="task__task-checkbox task-checkbox" type="checkbox">
             <label class="task__task-name task-name" for="">Go Shopping</label>
@@ -45,7 +42,6 @@
               <img class="delete-btn__img" src="./remove.svg" alt="remove button"/>
             </button>
           </li>
-
         </ul>
       </section>
       <section class="main__completed completed">
