--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a class='header__more_inf more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
       >Want more details?</a>
     </header>
-    <div class="main">
+    <main class="main">
       <section class="main__add-element add-element">
         <h3 class="add-element__heading heading">
           <label class="add-element__label" for="new-task">Add Item</label>
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </section>
-    </div>
+    </main>
     <script  src="app.js"></script>
   </body>
 </html>
