refactor: change name for class  according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3 class="add-element__heading heading">
           <label class="add-element__label" for="new-task">Add Item</label>
         </h3>
-        <div class="add-element__row-wrapper wrapper">
+        <div class="add-element__row-wrapper row-wrapper">
           <input class="row-wrapper__task-text task-text" id="new-task" type="text" />
           <button class="row-wrapper__add-btn add-btn btn">Add</button>
         </div>
