--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="body">
     <header class="header">
       <img class="header__img img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix picture"/>
-      <a class='header__more_inf more_inf' href="https://goal-life.com/page/method/matrix-eisenhower"
+      <a class="header__more_inf more_inf" href="https://goal-life.com/page/method/matrix-eisenhower"
       >Want more details?</a>
     </header>
     <main class="main">
